# axiomos-runtime

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONSTITUTION.md  DESIGN_DECISIONS.md  HANDSHAKE.md  HERMES_COMPARISON.md  PROJECT_STATUS.md  README.md  RELEASE_NOTES_1_0.md  ROADMAP.md  pyproject.toml
.github/workflows/: test.yml
configs/: providers.yaml  providers.yaml.example
docs/: ALPHA2_RELEASE_NOTES.md  ALPHA4_MEMORY_OS.md  ALPHA5_PACKAGE_SYSTEM.md  ALPHA6_TOOL_DRIVER_LAYER.md  AXIOMOS_1_1_DEV_SETUP_CONFIG.md  RUNTIME_1_0_INTEGRATED.md
docs/architecture/: broker.md  hypervisor.md  memory_os.md  package_system.md  permission_kernel.md
docs/comparisons/: hermes.md
docs/design/: realizations.md
examples/: LOOPS.md  sample.ax
src/axiomos/: __init__.py  about.py  axiom_ir.py  capability_broker.py  cli.py  commands.py  config.py  doctor.py  drivers.py  executive_function.py  goal_shell.py  graph.py  hypervisor.py  identity.py  loop_os.py  loop_runtime.py  memory.py  models.py  package_tool_bridge.py  packages.py  parser.py  permissions.py  planner.py  policy.py  provider_config.py  provider_metrics.py  provider_pool.py  receipts.py  redaction.py  router.py  session.py  setup.py  shell.py  skillopt_engine.py  tools.py  validator.py
tests/: test_1_1_about_docs.py  test_1_1_setup_config.py  test_alpha2.py  test_alpha3_broker.py  test_alpha4_memory_os.py  test_alpha5_package_system.py  test_alpha6_tool_driver_layer.py  test_executive_function.py  test_final_release.py  test_goal_shell.py  test_integrated_runtime.py  test_rc1_hardening.py
